Redirected "Landing" and kinda fixed footer spacing

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,7 +1,6 @@
 .footer {
     margin-top: auto;
     display: flex;
-    justify-content: center;
     /* height: 50px; */
     background-color: beige;
 }
